# adaptive-syntax-filter

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  aggregate_analysis_cleanup.md  cli.py  config_cli.py  export_cli.py  pyproject.toml  research_pipeline.py  result_archiving.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
aggregate_analysis/: README.md  aggregate_analysis.py  aggregate_analysis_clean.py  aggregate_analysis_deadlock_free.py  aggregate_analysis_optimized.py  aggregate_analysis_utils.py  batch_processing.py  create_comprehensive_plots.py  generate_aggregate_analysis.py
configs/: aggregate_config_1_linear_1st_short.yml  aggregate_config_2_linear_2nd_long.yml  aggregate_config_3_sigmoid_1st_medium.yml  aggregate_config_4_sigmoid_2nd_medium.yml  bengalese_finch.yml  canary.yml  constant.yml  higher_order.yml  medium.yml  minimal.yml  oscillatory.yml  small.yml
diagnostics/: README.md  compare_machines.py  diagnose_config4_specific.py  diagnose_external_machine.py  diagnose_external_machine_v2.py  external_vs_local_diagnostic.py  quick_external_test.py  simple_cleanup.py  simple_import_test.py  simple_machine_compare.py  targeted_bottleneck_test.py
docs/: README.md  algorithm.md  development.md  github_checklist.md  research_guide.md
documentation/: README.md  algorithm.md  development.md  github_checklist.md  research_guide.md
notebooks/: experiment_1.5_synthetic.ipynb  experiment_1_synthetic.ipynb
scripts/: README.md
src/adaptive_syntax_filter/: __init__.py
tests/: __init__.py  conftest.py  test_integration.py
(+37 files in other folders)
